# extrapops

./: .gitignore  LICENCE.txt  README.rst  TODO.md  pyproject.toml
examples/: N18.yaml  Tutorial.ipynb  background_MC.py  conftest.py  generate.py  generate_m.py  generate_spins.py  generate_z.py  gwtc3_median.yaml  test_tails.ipynb  volumes.py
extrapops/: background.py  constants.py  cosmology.py  experiments.py  mass.py  population.py  redshifts.py  snr.py  sobbh_waveform.py  spin.py  tools.py  yaml.py
